Fix alightnment of profile pic on mobile navbar

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -69,6 +69,10 @@ nav ul a {
         margin: 0;
         text-align: center;
     }  
+
+    ul.right {
+        width: 150px; 
+    }
 }
 
 /* Desktop */
